[package]
name = "lynx-rpc"
version = "0.0.1"
edition = "2021"
authors = ["FlacSy"]
description = "Библиотека-ядро для удаленного вызова процедур (RPC) на Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/NullPointerGang/LynxRPC"
readme = "README.md"
keywords = ["rpc", "network", "async", "distributed-systems"]
categories = ["network-programming", "asynchronous"]


[dependencies]
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4"] }
thiserror = "1.0"
bytes = "1.0"
futures = "0.3"
libc = "0.2"
parking_lot = "0.12"
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
cxx = "1.0"